[gd_scene load_steps=6 format=3 uid="uid://dryteg2se7nmk"]

[ext_resource type="Script" uid="uid://bkgx4wyc5f3wt" path="res://door_church.gd" id="1_7rsil"]
[ext_resource type="PackedScene" uid="uid://ound6fyha38e" path="res://scenes/components/interactable_component.tscn" id="2_h7522"]
[ext_resource type="PackedScene" uid="uid://blysspy4gmnmr" path="res://scenes/components/interactable_label_component.tscn" id="3_ga1es"]
[ext_resource type="FontFile" uid="uid://duhiqkefsl3ng" path="res://assets/fonts/Pixellari.ttf" id="4_h7522"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ag7wr"]
radius = 17.0

[node name="doorChurch" type="Node2D"]
script = ExtResource("1_7rsil")

[node name="InteractableComponent" parent="." instance=ExtResource("2_h7522")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableComponent"]
shape = SubResource("CircleShape2D_ag7wr")

[node name="InteractableLabelComponent" parent="." instance=ExtResource("3_ga1es")]

[node name="Label" type="Label" parent="."]
offset_left = -24.0
offset_top = -37.0
offset_right = 27.0
offset_bottom = -21.0
theme_override_fonts/font = ExtResource("4_h7522")
theme_override_font_sizes/font_size = 16
text = "Locked"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
